Support JakartaEE 10